c/examples/gcc/testsuite/c-c++-common/attr-aligned-2.c
/* PR c/115549 */
/* { dg-do compile } */

__attribute__((aligned,optimize(s))) /* { dg-error "not declared|undeclared" } */
int s()
{
  return 0;
}
